--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"native-duplexpair": "^1.0.0",
 		"node-cache": "^5.1.2",
 		"node-fetch": "^3.2.6",
+		"ocsp": "^1.2.0",
 		"radius": "~1.1.4",
 		"smtp-client": "^0.4.0",
 		"yargs": "~17.5.1"
